# Whisper-TikTok

./: .changelog-config.yaml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  Pipfile  README.md  SECURITY.md  SPEECHIFY_MIGRATION_GUIDE.md  Whisper-TikTok-Linux.sh  Whisper-TikTok-Windows.bat  app.py  clips.csv  docker-compose.yml  example-reddit-post.txt  example-video.json  example.env  index.html  main.py  mkdocs.yml  msg.py  objects.inv  pyproject.toml  reddit2json.py  requirements.txt  requirements_test.txt  test_speechify_migration.py  utils.py  video.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: ci-style-checks.yml  ci.yml  ci_changelog.yaml  ci_mkdocs.yml  codeql-analysis.yml  hf.yml  release.yml  run_test.yml
.streamlit/: config.toml
1-ffmpeg/: index.html
2-cuda/: index.html
3-docker/: index.html
Whisper_TikTok/: main.py  subtitle_creator.py  text_to_speech.py  tiktok.py  utils.py  video_creator.py  video_downloader.py  video_prepare.py  voice_manager.py
api/: index.py
app/: README.md  next.config.ts  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/background/: page.tsx
app/app/content/: page.tsx
app/components/home/: SidebarComponent.tsx
app/components/ui/: animated-hero.tsx  sidebar.tsx
code/: main.py  script.txt  utils.py  video.json
docs/: 1-ffmpeg.md  2-cuda.md  3-docker.md  index.md  whisper_tiktok.md
examples/: notebook.ipynb
pages/: reddit.py
search/: search_index.json
src/: arg_parser.py  logger.py  subtitle_creator.py  text_to_speech.py  tiktok.py  video_creator.py  video_downloader.py  video_prepare.py  voice_manager.py
tests/: test_ffprobe.py  test_import.py  test_srt_create.py  test_utils.py
whisper_tiktok/: __init__.py  container.py  index.html  main.py  subtitle_creator.py  text_to_speech.py  tiktok.py  utils.py  version.py  video_creator.py  video_downloader.py  video_prepare.py  voice_manager.py
whisper_tiktok/config/: logger_config.py
whisper_tiktok/execution/: command_executor.py
whisper_tiktok/factories/: video_factory.py
whisper_tiktok/interfaces/: transcription_service.py  tts_service.py  video_downloader.py
whisper_tiktok/processors/: video_processor.py
whisper_tiktok/repositories/: video_repository.py
whisper_tiktok/services/: ffmpeg_service.py  transcription_service.py  tts_service.py  video_downloader.py
whisper_tiktok/strategies/: processing_strategy.py
whisper_tiktok/utils/: color_utils.py
