[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools" ]

[project]
name = "whisper-tiktok"
description = "A TikTok video creation tool using Whisper ASR and EdgeTTS"
readme.content-type = "text/markdown"
readme.file = "README.md"
authors = [
    { name="Matteo Fasulo", email="74818541+MatteoFasulo@users.noreply.github.com" },
]
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [ "version" ]
urls = { Homepage = "https://github.com/MatteoFasulo/Whisper-TikTok" }
scripts.whisper = "whisper_tiktok.main:app"
dependencies = [
    "dependency-injector>=4.0,<5.0",
    "edge-tts==7.2.6",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "rich>=14.2.0",
    "stable-ts>=2.19.1",
    "streamlit>=1.52.1",
    "tiktok-uploader>=1.1.5",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "yt-dlp>=2025.11.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "anyio",
    "nbmake",
    "black",
    "isort",
    "pre-commit>=4.5.0",
    "bump-my-version",
    "generate-changelog",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools]
py-modules = [ "whisper_tiktok" ]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "whisper_tiktok.version.__version__" }

[tool.setuptools.packages.find]
exclude = [ "tests*" ]
namespaces = false

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true
multi_line_output = 3

[tool.black]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -v --strict -n=auto"

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
pre_commit_hooks = ["pytest", "uv sync", "git add uv.lock"]
commit_args = ""
